[Fix][Ai-Chat] fixs ui

--- a/Android/scenes/aichat/src/main/res/layout/aichat_fragment_voice_call.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_fragment_voice_call.xml
@@ -171,12 +171,13 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivAudioNoSound"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="40dp"
         android:src="@drawable/aichat_audio_no_sound"
         android:visibility="invisible"
+        android:layout_marginHorizontal="30dp"
         app:layout_constraintBottom_toTopOf="@id/btnVoiceCallInterrupt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -184,14 +185,13 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivAudioSound"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/aichat_audio_no_sound"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/ivAudioNoSound"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/ivAudioNoSound"
+        app:layout_constraintStart_toStartOf="@id/ivAudioNoSound"
         app:layout_constraintTop_toTopOf="@+id/ivAudioNoSound"
         tools:visibility="visible" />
 
