--- a/Android/scenes/cantata/src/main/res/layout/cantata_fragment_song_list.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_fragment_song_list.xml
@@ -6,89 +6,28 @@
     android:layout_height="match_parent"
     tools:theme="@style/Theme.MaterialComponents">
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etSearch"
+    <com.scwang.smart.refresh.layout.SmartRefreshLayout
+        android:id="@+id/smart_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/bg_full_black_r50"
-        android:drawableStart="@drawable/cantata_ic_search"
-        android:drawablePadding="8dp"
-        android:gravity="center_vertical"
-        android:hint="@string/cantata_dialog_music_list_search_hint"
-        android:imeOptions="actionSearch"
-        android:maxLines="1"
-        android:paddingHorizontal="15dp"
-        android:singleLine="true"
-        android:textColor="@color/white"
-        android:textColorHint="@color/text_color_66"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/iBtnClear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:background="@null"
-        android:src="@mipmap/ic_close"
-        app:layout_constraintBottom_toBottomOf="@id/etSearch"
-        app:layout_constraintEnd_toEndOf="@id/etSearch"
-        app:layout_constraintTop_toTopOf="@id/etSearch" />
+        <com.scwang.smart.refresh.header.ClassicsHeader
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:id="@+id/hScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="29dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/cantata_dialog_bg_blue"
-        android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etSearch">
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayout"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvRankList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:tabGravity="center"
-            app:tabTextColor="@color/def_text_grey_979"
-            app:tabSelectedTextColor="@color/white"
-            app:tabIndicatorColor="@color/blue_9F"
-            app:tabIndicatorGravity="bottom"
-            app:tabIndicatorFullWidth="false"
-            app:tabIndicatorHeight="2dp"
-            app:tabMode="scrollable" />
+            android:overScrollMode="never"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="1"
+            tools:listitem="@layout/cantata_item_choose_song_list" />
 
-    </LinearLayout>
-
-    <!--通过NestedScrollableHost解决ViewPager2嵌套ViewPager2的滑动冲突-->
-    <io.agora.scene.cantata.widget.NestedScrollableHost
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/hScrollView">
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/mViewPager2"
+        <com.scwang.smart.refresh.footer.ClassicsFooter
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </io.agora.scene.cantata.widget.NestedScrollableHost>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerSearchResult"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:visibility="gone"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/hScrollView"
-        tools:listitem="@layout/cantata_item_choose_song_list" />
+            android:layout_height="wrap_content" />
+    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/llEmpty"
@@ -103,6 +42,6 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etSearch" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
