--- a/Android/app/src/main/res/layout/app_activity_main.xml
+++ b/Android/app/src/main/res/layout/app_activity_main.xml
@@ -29,4 +29,30 @@
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/app_mobile_navigation" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="实名"
+            android:id="@+id/btn1"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="安全"
+            android:id="@+id/btn2"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="温馨"
+            android:id="@+id/btn3"/>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
