--- a/Android/common/ui-widget/src/main/res/layout/dialog_real_name.xml
+++ b/Android/common/ui-widget/src/main/res/layout/dialog_real_name.xml
@@ -7,13 +7,13 @@
     android:layout_gravity="bottom"
     android:background="@drawable/bg_dialog_top_r20"
     android:orientation="vertical"
-    android:paddingBottom="48dp"
+    android:paddingBottom="20dp"
     android:theme="@style/Theme.MaterialComponents.BottomSheetDialog">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/topLayout"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/bg_dialog_head_gradient_r20"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -36,17 +36,21 @@
             android:textColor="#040925"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/content"
+            android:layout_marginTop="12dp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/top_icon" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/content"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/comm_realname_explanation"
             android:textColor="@color/def_text_grey_979"
             android:textSize="12sp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/title"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -75,7 +79,7 @@
             android:gravity="start|center"
             android:hint="@string/comm_realname_name_hint"
             android:imeOptions="actionDone"
-            android:maxLength="12"
+            android:maxLength="6"
             android:maxLines="1"
             android:padding="12dp"
             android:singleLine="true"
