--- a/Android/common/ui-widget/src/main/res/layout/dialog_room_duration.xml
+++ b/Android/common/ui-widget/src/main/res/layout/dialog_room_duration.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="bottom"
     android:background="@drawable/bg_dialog_top_r20"
     android:orientation="vertical"
-    android:paddingBottom="48dp"
+    android:paddingBottom="20dp"
     android:theme="@style/Theme.MaterialComponents.BottomSheetDialog">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -29,8 +29,8 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/title"
-            android:layout_width="57dp"
-            android:layout_height="19dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:text="@string/comm_kind_reminder"
             android:textColor="#040925"
