--- a/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_profile_change.xml
+++ b/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_profile_change.xml
@@ -3,5 +3,5 @@
     <corners
         android:topLeftRadius="20dp"
         android:topRightRadius="20dp"/>
-    <solid android:color="@color/voice_white"/>
+    <solid android:color="@color/white"/>
 </shape>
