--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_center_fragment_alert.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_center_fragment_alert.xml
@@ -12,7 +12,7 @@
         android:id="@+id/mtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/voice_dark_grey_color_040925"
+        android:textColor="@color/def_text_color_040"
         android:textSize="16sp"
         android:textStyle="bold"
         android:visibility="visible"
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:textColor="@color/voice_dark_grey_color_6c7192"
+        android:textColor="@color/def_text_grey_6c7"
         android:textSize="14sp"
         android:gravity="center"
         app:layout_goneMarginTop="0dp"
@@ -45,8 +45,8 @@
         android:paddingHorizontal="24dp"
         android:text="@string/voice_spatial_room_cancel"
         android:layout_width="wrap_content"
-        style="@style/voice_chatroom_cancel_button_text_style"
-        android:textColor="@color/voice_dark_grey_color_040925"
+        style="@style/voice_spatial_cancel_button_text_style"
+        android:textColor="@color/def_text_color_040"
         app:layout_constraintEnd_toStartOf="@+id/gl50"
         app:layout_constraintTop_toBottomOf="@+id/mtContent" />
 
@@ -63,7 +63,7 @@
         android:layout_marginBottom="30dp"
         android:paddingHorizontal="24dp"
         android:layout_width="wrap_content"
-        style="@style/voice_chatroom_confirm_button_text_style"
+        style="@style/voice_spatial_confirm_button_text_style"
         android:gravity="center"
         android:text="@string/voice_spatial_room_confirm"
         app:layout_constraintBottom_toBottomOf="parent"
