--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_mic_manager.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_mic_manager.xml
@@ -51,8 +51,8 @@
         android:layout_marginTop="10dp"
         android:ellipsize="end"
         android:gravity="center"
-        android:textColor="@color/voice_color_333333"
-        android:textSize="@dimen/voice_sp_14"
+        android:textColor="@color/black33"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/ivMicInfo"
         app:layout_constraintStart_toStartOf="@+id/ivMicInfo"
@@ -68,8 +68,8 @@
         android:drawablePadding="4dp"
         android:gravity="center"
         android:text="@string/voice_spatial_host"
-        android:textColor="@color/voice_color_333333"
-        android:textSize="@dimen/voice_sp_11"
+        android:textColor="@color/black33"
+        android:textSize="11sp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="60dp"
-        app:dividerColor="@color/voice_divider_color_1f979797"
+        app:dividerColor="#1f979797"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
