--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_item_contribution_ranking.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_item_contribution_ranking.xml
@@ -36,8 +36,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="@color/voice_color_333333"
-        android:textSize="@dimen/voice_sp_8"
+        android:textColor="@color/black33"
+        android:textSize="8sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/ivAudienceAvatar"
         app:layout_constraintEnd_toStartOf="@+id/ivAudienceAvatar"
@@ -54,8 +54,8 @@
         android:layout_marginEnd="10dp"
         android:gravity="start"
         android:lines="1"
-        android:textColor="@color/voice_color_333333"
-        android:textSize="@dimen/voice_sp_14"
+        android:textColor="@color/black33"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/ivAudienceAvatar"
         app:layout_constraintStart_toEndOf="@+id/ivAudienceAvatar"
         app:layout_constraintEnd_toStartOf="@+id/mtContributionValue"
@@ -68,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
         android:gravity="end"
-        android:textColor="@color/voice_dark_grey_color_6c7192"
+        android:textColor="@color/def_text_grey_6c7"
         android:textSize="16sp"
         android:drawablePadding="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/ivAudienceAvatar"
