--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_item_room_mic_manager.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_item_room_mic_manager.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:textColor="@color/voice_main_color_156ef3"
-        android:textSize="@dimen/voice_sp_14"
+        android:textColor="@color/blue_15"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
