--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_room_hands_tab_item.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_room_hands_tab_item.xml
@@ -11,8 +11,8 @@
         android:paddingBottom="2dp"
         android:paddingTop="2dp"
         android:text="@string/voice_spatial_room_raised_hands_title"
-        android:textColor="@color/voice_color_979cbb"
-        android:textSize="@dimen/voice_sp_15"
+        android:textColor="@color/def_text_grey_979"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
