--- a/Android/common/ui-widget/src/main/res/values/colors.xml
+++ b/Android/common/ui-widget/src/main/res/values/colors.xml
@@ -97,5 +97,6 @@
     <color name="white_90_percent">#E5FFFFFF</color>
     <color name="yellow">#f4ea2a</color>
     <color name="grey_80_percent">#CCCCCCCC</color>
+    <color name="divider_color_1f979797">#1F979797</color>
 
 </resources>
