--- a/Android/scenes/voice/src/main/res/values/styles.xml
+++ b/Android/scenes/voice/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
         <item name="android:paddingLeft">8dp</item>
         <item name="android:button">@drawable/voice_room_create_encrypt_bg</item>
         <item name="buttonStyle">@style/Widget.AppCompat.Button.Borderless</item>
-        <item name="background">@color/voice_transparent</item>
+        <item name="background">@android:color/transparent</item>
     </style>
 
     <style name="voice_edit_encryption">
@@ -32,8 +32,8 @@
         <item name="android:drawablePadding">3dp</item>
         <item name="android:paddingStart">8dp</item>
         <item name="android:paddingEnd">8dp</item>
-        <item name="android:textColor">@color/voice_white</item>
-        <item name="android:textSize">@dimen/voice_sp_12</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">12sp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:background">@drawable/voice_rect_r999_black08062f</item>
     </style>
@@ -43,8 +43,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">11dp</item>
         <item name="android:paddingBottom">11dp</item>
-        <item name="android:textColor">@color/voice_dark_grey_color_040925</item>
-        <item name="android:textSize">@dimen/voice_sp_16</item>
+        <item name="android:textColor">@color/def_text_color_040</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
     </style>
@@ -167,7 +167,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">10dp</item>
         <item name="android:paddingBottom">10dp</item>
-        <item name="android:textColor">@color/voice_color_756e98</item>
+        <item name="android:textColor">#756E98</item>
         <item name="android:textSize">@dimen/voice_sp_16</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/voice_bg_rect_radius24_eff4ff</item>
