--- a/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_primary_menu_input_edit.xml
+++ b/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_primary_menu_input_edit.xml
@@ -3,5 +3,5 @@
     <solid android:color="#FFFFFF" />
     <corners android:radius="18dp"/>
     <size android:width="226dp" android:height="36dp"/>
-    <stroke android:width="1px" android:color="@color/voice_color_e4e3ed"/>
+    <stroke android:width="1px" android:color="#e4e3ed"/>
 </shape>
