--- a/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_rect_radius20_grey.xml
+++ b/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_rect_radius20_grey.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="20dp" />
-    <solid android:color="@color/voice_black_30" />
+    <solid android:color="@color/black_30_percent" />
 </shape>
