--- a/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_rect_radius24_eff4ff.xml
+++ b/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_rect_radius24_eff4ff.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="24dp" />
-    <solid android:color="@color/voice_dark_grey_color_eff4ff" />
+    <solid android:color="#eff4ff" />
 </shape>
