--- a/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_rect_radius24_grey.xml
+++ b/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_rect_radius24_grey.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="24dp" />
-    <solid android:color="@color/voice_color_f1f3f8" />
+    <solid android:color="#f1f3f8" />
 </shape>
