--- a/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_rect_radius4_grey.xml
+++ b/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_rect_radius4_grey.xml
@@ -4,6 +4,6 @@
     <corners android:radius="4dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/voice_color_ececf0" />
-    <solid android:color="@color/voice_color_f2f2f5" />
+        android:color="#ececf0" />
+    <solid android:color="#f2f2f5" />
 </shape>
