--- a/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_rect_stoke4_blue.xml
+++ b/Android/scenes/voice_spatial/src/main/res/drawable/voice_bg_rect_stoke4_blue.xml
@@ -4,5 +4,5 @@
     <corners android:radius="4dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/voice_main_color_156ef3" />
+        android:color="@color/blue_15" />
 </shape>
