--- a/Android/scenes/voice_spatial/src/main/res/drawable/voice_drawable_tab_indicator.xml
+++ b/Android/scenes/voice_spatial/src/main/res/drawable/voice_drawable_tab_indicator.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/voice_main_color_156ef3" />
+    <solid android:color="@color/blue_15" />
     <corners android:radius="2dp" />
 </shape>
