--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_agora_room_list_layout.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_agora_room_list_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/bg_app_def_white">
@@ -9,12 +10,13 @@
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="44dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:voice_titleBarDisplayHomeAsUpEnabled="true"
-        app:voice_titleBarRightVisible="false"
-        app:voice_titleBarTitle="@string/voice_spatial_room_list_title_name"
-        app:voice_titleBarTitleTextColor="@color/voice_black" />
+        app:voice_spatial_titleBarDisplayHomeAsUpEnabled="true"
+        app:voice_spatial_titleBarRightVisible="false"
+        app:voice_spatial_titleBarTitle="@string/voice_spatial_room_list_title_name"
+        app:voice_spatial_titleBarTitleTextColor="@color/black"
+        tools:layout_editor_absoluteX="0dp" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/avatar_layout"
@@ -51,14 +53,14 @@
         android:id="@+id/agora_tab_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/voice_transparent"
+        android:background="@android:color/transparent"
         android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_bar"
         app:tabIndicatorHeight="0dp"
         app:tabMode="scrollable"
-        app:tabRippleColor="@color/voice_transparent" />
+        app:tabRippleColor="@android:color/transparent" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_fragment"
