--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_3d_spatial_mic_tutorial.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_3d_spatial_mic_tutorial.xml
@@ -25,7 +25,7 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mtBottomSheetTitle"
-        style="@style/voice_bottom_sheet_title_style"
+        style="@style/voice_spatial_bottom_sheet_title_style"
         android:text="@string/voice_spatial_3d_spatial_audio_tips"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,8 +48,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="20dp"
         android:text="@string/voice_spatial_audio_part1"
-        android:textColor="@color/voice_color_3c4267"
-        android:textSize="@dimen/voice_sp_14"
+        android:textColor="@color/def_text_color_3c4"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv3dSpatialPar1"
         app:layout_constraintTop_toTopOf="@+id/iv3dSpatialPar1" />
@@ -61,7 +61,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
         android:src="@drawable/voice_icon_3d_spatial_part2"
-        android:textColor="@color/voice_main_color_156ef3"
+        android:textColor="@color/blue_15"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv3dSpatialPar1" />
 
@@ -72,8 +72,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="20dp"
         android:text="@string/voice_spatial_3d_spatial_audio_part2"
-        android:textColor="@color/voice_color_3c4267"
-        android:textSize="@dimen/voice_sp_14"
+        android:textColor="@color/def_text_color_3c4"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv3dSpatialPar2"
         app:layout_constraintTop_toTopOf="@+id/iv3dSpatialPar2" />
