--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_bottom_sheet_single.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_bottom_sheet_single.xml
@@ -23,14 +23,14 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mbCancel"
-        style="@style/voice_chatroom_cancel_button_text_style"
+        style="@style/voice_spatial_cancel_button_text_style"
         android:layout_width="0dp"
         android:layout_marginHorizontal="28dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="68dp"
         android:layout_marginBottom="20dp"
         android:text="@string/voice_spatial_cancel_request"
-        android:textColor="@color/voice_color_756e98"
+        android:textColor="#756E98"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
