--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_center_fragment_content.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_center_fragment_content.xml
@@ -14,8 +14,8 @@
         android:paddingStart="25dp"
         android:paddingEnd="25dp"
         android:layout_marginTop="30dp"
-        android:textColor="@color/voice_dark_grey_color_040925"
-        android:textSize="@dimen/voice_sp_14"
+        android:textColor="@color/def_text_color_040"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,7 +27,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="30dp"
         android:layout_width="0dp"
-        style="@style/voice_chatroom_confirm_button_text_style"
+        style="@style/voice_spatial_confirm_button_text_style"
         android:gravity="center"
         android:layout_marginTop="34dp"
         android:text="@string/voice_spatial_room_confirm"
