--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_encryption.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_encryption.xml
@@ -14,7 +14,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/title"
         android:textSize="16sp"
-        android:textColor="@color/voice_dark_grey_color_040925"
+        android:textColor="@color/def_text_color_040"
         android:text="@string/voice_spatial_room_create_tips"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -35,12 +35,12 @@
         app:voice_textSize="18sp"
         app:voice_isPwd="false"
         android:inputType="number"
-        app:voice_textColor="@color/voice_dark_grey_color_040925"
+        app:voice_textColor="@color/def_text_color_040"
         app:voice_textLength="4"
         app:voice_defaultColor="#E4E3ED"
         app:voice_backColor="@android:color/white"
         app:voice_checkedColor="#E4E3ED"
-        app:voice_waitInputColor="@color/voice_main_color_009fff"/>
+        app:voice_waitInputColor="@color/blue_9F"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/mbLeft"
@@ -53,10 +53,10 @@
         android:paddingVertical="12dp"
         android:text="@string/voice_spatial_room_cancel"
         android:textAllCaps="false"
-        android:textColor="@color/voice_dark_grey_color_040925"
+        android:textColor="@color/def_text_color_040"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:backgroundTint="@color/voice_dark_grey_color_eff4ff"
+        app:backgroundTint="@color/def_text_color_white"
         app:cornerRadius="24dp"
         app:layout_constraintEnd_toStartOf="@+id/gl50"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +83,7 @@
         android:textColor="@android:color/white"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:backgroundTint="@color/voice_main_color_156ef3"
+        app:backgroundTint="@color/blue_15"
         app:cornerRadius="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/gl50"
