--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_room_notice.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_dialog_room_notice.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="@string/voice_spatial_notice"
-        android:textColor="@color/voice_dark_grey_color_040925"
+        android:textColor="@color/def_text_color_040"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mbConfirm"
-        style="@style/voice_chatroom_confirm_button_text_style"
+        style="@style/voice_spatial_confirm_button_text_style"
         android:layout_marginEnd="16dp"
         android:paddingHorizontal="18dp"
         android:paddingVertical="8dp"
@@ -57,7 +57,7 @@
         android:layout_marginStart="16dp"
         android:padding="10dp"
         android:text="@string/voice_spatial_room_cancel"
-        android:textColor="@color/voice_dark_grey_color_6c7192"
+        android:textColor="@color/def_text_grey_6c7"
         android:textSize="14sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/mtTitle"
@@ -74,7 +74,7 @@
         android:layout_marginBottom="15dp"
         android:lineSpacingExtra="6dp"
         android:paddingTop="14dp"
-        android:textColor="@color/voice_color_3c4267"
+        android:textColor="@color/def_text_color_3c4"
         android:textSize="14sp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/mbEdit"
@@ -106,17 +106,17 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="18dp"
             android:layout_marginEnd="5dp"
-            android:background="@color/voice_transparent"
+            android:background="@android:color/transparent"
             android:hint="@string/voice_spatial_notice_edit_hint"
-            android:textColorHint="@color/voice_dark_grey_color_979cbb"
+            android:textColorHint="@color/def_text_grey_979"
             android:gravity="top"
             android:lines="5"
             android:lineSpacingExtra="5dp"
             android:maxLength="140"
             android:paddingTop="14dp"
-            android:textColor="@color/voice_color_3c4267"
+            android:textColor="@color/def_text_color_3c4"
             android:textCursorDrawable="@drawable/voice_color_edit_cursor"
-            android:textSize="@dimen/voice_sp_14" />
+            android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -148,7 +148,7 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mbEdit"
-        style="@style/voice_chatroom_confirm_button_text_style"
+        style="@style/voice_spatial_confirm_button_text_style"
         android:layout_width="0dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
