--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_fragment_audience_list.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_fragment_audience_list.xml
@@ -27,8 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="9dp"
         android:text="@string/voice_spatial_contribution_empty"
-        android:textColor="@color/voice_dark_grey_color_979cbb"
-        android:textSize="@dimen/voice_sp_14"
+        android:textColor="@color/def_text_grey_979"
+        android:textSize="14sp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/ivContributionEmpty"
         app:layout_constraintStart_toStartOf="@+id/ivContributionEmpty"
