--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_item_profile_avatar.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_item_profile_avatar.xml
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
-        android:src="@color/voice_main_color_009fff"
+        android:src="@color/blue_9F"
         app:shapeAppearance="@style/ui_widget_roundStyle"
         android:layout_width="68dp"
         android:layout_height="68dp"/>
