--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_item_room_ains_audition.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_item_room_ains_audition.xml
@@ -21,8 +21,8 @@
             android:id="@+id/mtChatroomAinsName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/voice_color_3c4267"
-            android:textSize="@dimen/voice_sp_13"
+            android:textColor="@color/def_text_color_3c4"
+            android:textSize="13sp"
             android:textStyle="bold"
             tools:text="TV Sound" />
 
@@ -30,32 +30,32 @@
             android:id="@+id/mtChatroomAinsSubName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/voice_dark_grey_color_979cbb"
-            android:textSize="@dimen/voice_sp_10"
+            android:textColor="@color/def_text_grey_979"
+            android:textSize="10sp"
             tools:text="Ex. Bird, car, subway sounds" />
     </LinearLayout>
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mtChatroomAins"
-        style="@style/voice_bottom_sheet_frame_text_style"
+        style="@style/voice_spatial_bottom_sheet_frame_text_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="6dp"
         android:text="@string/voice_spatial_ains"
-        android:textColor="@color/voice_color_0a7aff"
+        android:textColor="#0a7aff"
         app:layout_constraintBottom_toBottomOf="@+id/mtChatroomAinsNone"
         app:layout_constraintEnd_toStartOf="@+id/mtChatroomAinsNone"
         app:layout_constraintTop_toTopOf="@+id/mtChatroomAinsNone" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mtChatroomAinsNone"
-        style="@style/voice_bottom_sheet_frame_text_style"
+        style="@style/voice_spatial_bottom_sheet_frame_text_style"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="14dp"
         android:background="@drawable/voice_bg_rect_radius4_grey"
         android:text="@string/voice_spatial_none"
-        android:textColor="@color/voice_dark_grey_color_979cbb"
+        android:textColor="@color/def_text_grey_979"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -66,5 +66,5 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:dividerColor="@color/voice_divider_color_1f979797"/>
+        app:dividerColor="@color/divider_color_1f979797"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
