--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_tab_item_layout.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_tab_item_layout.xml
@@ -2,14 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/voice_transparent"
+    android:background="@android:color/transparent"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/voice_transparent"
+        android:background="@android:color/transparent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="17dp"
             android:gravity="center"
-            android:textSize="@dimen/voice_sp_12"
+            android:textSize="12sp"
             android:maxLines="1"
             android:maxLength="30"
             android:singleLine="true"
