--- a/Android/scenes/voice_spatial/src/main/res/values/styles.xml
+++ b/Android/scenes/voice_spatial/src/main/res/values/styles.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="voice_radio_style">
+    <style name="voice_spatial_radio_style">
         <item name="android:paddingLeft">8dp</item>
         <item name="android:button">@drawable/voice_room_create_encrypt_bg</item>
         <item name="buttonStyle">@style/Widget.AppCompat.Button.Borderless</item>
         <item name="background">@android:color/transparent</item>
     </style>
 
-    <style name="voice_edit_encryption">
+    <style name="voice_spatial_edit_encryption">
         <item name="android:layout_marginStart">16dp</item>
     </style>
 
-    <style name="voice_RoundedStyle">
+    <style name="voice_spatial_RoundedStyle">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">16dp</item>
     </style>
 
-    <style name="voice_measureSoftKeyAppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="voice_spatial_measureSoftKeyAppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowNoTitle">true</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="voice_BottomSheetDialogAnimation">
+    <style name="voice_spatial_BottomSheetDialogAnimation">
         <item name="android:windowEnterAnimation">@anim/voice_anim_slide_in_right</item>
         <item name="android:windowExitAnimation">@anim/voice_anim_slide_out_right</item>
     </style>
 
-    <style name="voice_top_text_style">
+    <style name="voice_spatial_top_text_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:drawablePadding">3dp</item>
@@ -40,45 +40,45 @@
         <item name="android:background">@drawable/voice_bg_rect_radius13_black20</item>
     </style>
 
-    <style name="voice_bottom_sheet_title_style">
+    <style name="voice_spatial_bottom_sheet_title_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">11dp</item>
         <item name="android:paddingBottom">11dp</item>
-        <item name="android:textColor">@color/voice_dark_grey_color_040925</item>
+        <item name="android:textColor">@color/def_text_color_040</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="voice_bottom_sheet_subtitle_style">
+    <style name="voice_spatial_bottom_sheet_subtitle_style">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingStart">20dp</item>
         <item name="android:paddingEnd">20dp</item>
         <item name="android:paddingTop">7dp</item>
         <item name="android:paddingBottom">7dp</item>
-        <item name="android:textColor">@color/voice_dark_grey_color_6c7192</item>
+        <item name="android:textColor">@color/def_text_grey_6c7</item>
         <item name="android:textSize">13sp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:drawablePadding">5dp</item>
-        <item name="android:background">@color/voice_color_f7f8fb</item>
+        <item name="android:background">#f7f8fb</item>
     </style>
 
-    <style name="voice_bottom_sheet_text_style">
+    <style name="voice_spatial_bottom_sheet_text_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingEnd">30dp</item>
         <item name="android:paddingTop">16dp</item>
         <item name="android:paddingBottom">16dp</item>
         <item name="android:drawablePadding">12dp</item>
-        <item name="android:textColor">@color/voice_color_3c4267</item>
+        <item name="android:textColor">@color/def_text_color_3c4</item>
         <item name="android:textSize">13sp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="voice_bottom_sheet_checkbox">
+    <style name="voice_spatial_bottom_sheet_checkbox">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginEnd">20dp</item>
@@ -86,7 +86,7 @@
         <item name="android:button">@drawable/cb_def_selector</item>
     </style>
 
-    <style name="voice_bottom_sheet_progress">
+    <style name="voice_spatial_bottom_sheet_progress">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingEnd">10dp</item>
@@ -96,7 +96,7 @@
         <item name="android:max">100</item>
     </style>
 
-    <style name="voice_bottom_sheet_right_text_style">
+    <style name="voice_spatial_bottom_sheet_right_text_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingStart">18dp</item>
@@ -104,28 +104,28 @@
         <item name="android:paddingBottom">15dp</item>
         <item name="android:paddingEnd">19dp</item>
         <item name="android:drawablePadding">4dp</item>
-        <item name="android:textColor">@color/voice_color_3c4267</item>
+        <item name="android:textColor">@color/def_text_color_3c4</item>
         <item name="android:textSize">13sp</item>
         <item name="android:gravity">center_vertical</item>
     </style>
 
-    <style name="voice_bottom_sheet_frame_text_style">
+    <style name="voice_spatial_bottom_sheet_frame_text_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingStart">7dp</item>
         <item name="android:paddingEnd">7dp</item>
         <item name="android:paddingTop">5dp</item>
         <item name="android:paddingBottom">5dp</item>
-        <item name="android:textColor">@color/voice_main_color_156ef3</item>
+        <item name="android:textColor">@color/blue_15</item>
         <item name="android:textSize">11sp</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/voice_bg_rect_stoke4_blue</item>
     </style>
 
-    <style name="voice_bottom_sheet_divider_style">
+    <style name="voice_spatial_bottom_sheet_divider_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
-        <item name="dividerColor">@color/voice_divider_color_1f979797</item>
+        <item name="dividerColor">@color/divider_color_1f979797</item>
     </style>
 
     <declare-styleable name="voice_encryption_input_style">
@@ -144,39 +144,21 @@
         <attr name="voice_isWaitInput" format="boolean" />
     </declare-styleable>
 
-    <!-- like自定义属性 -->
-    <declare-styleable name="voice_LikeLayout">
-        <attr name="voice_initX" format="dimension" />
-        <attr name="voice_initY" format="dimension" />
-        <attr name="voice_xRand" format="dimension" />
-        <attr name="voice_animLengthRand" format="dimension" />
-        <attr name="voice_xPointFactor" format="dimension" />
-        <attr name="voice_animLength" format="dimension" />
-        <attr name="voice_heart_width" format="dimension" />
-        <attr name="voice_heart_height" format="dimension" />
-        <attr name="voice_bezierFactor" format="integer" />
-        <attr name="voice_anim_duration" format="integer" />
-    </declare-styleable>
-
-    <style name="voice_BottomDialogFragment.Animation" parent="android:Animation">
-        <item name="android:windowEnterAnimation">@anim/voice_bottom_anim_enter</item>
-        <item name="android:windowExitAnimation">@anim/voice_bottom_anim_exit</item>
-    </style>
 
     <!--    取消按钮-->
-    <style name="voice_chatroom_cancel_button_text_style">
+    <style name="voice_spatial_cancel_button_text_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">10dp</item>
         <item name="android:paddingBottom">10dp</item>
-        <item name="android:textColor">@color/voice_color_756e98</item>
+        <item name="android:textColor">#756e98</item>
         <item name="android:textSize">16sp</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/voice_bg_rect_radius24_eff4ff</item>
     </style>
 
     <!--    确认按钮-->
-    <style name="voice_chatroom_confirm_button_text_style">
+    <style name="voice_spatial_confirm_button_text_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">10dp</item>
