[Feat][Android] Remove redundant code.

--- a/Android/app/src/main/res/layout/app_fragment_login_advertise.xml
+++ b/Android/app/src/main/res/layout/app_fragment_login_advertise.xml
@@ -121,7 +121,7 @@
         app:layout_constraintBottom_toTopOf="@+id/dotIndicator"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <com.agora.entfulldemo.widget.FadeDotsIndicator
+    <io.agora.scene.widget.FadeDotsIndicator
         android:id="@+id/dotIndicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
