[Fix][Android] fixs jira bug

--- a/Android/common/ui-widget/src/main/res/layout/view_common_title.xml
+++ b/Android/common/ui-widget/src/main/res/layout/view_common_title.xml
@@ -31,11 +31,14 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_center_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="58dp"
         android:gravity="center"
         android:textColor="@color/def_text_color_040"
         android:textSize="17sp"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_marginHorizontal="48dp"
         app:layout_constraintBottom_toBottomOf="@id/iv_back_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
