--- a/Android/app/src/main/res/layout/app_fragment_home_find.xml
+++ b/Android/app/src/main/res/layout/app_fragment_home_find.xml
@@ -358,6 +358,7 @@
 
                     <androidx.appcompat.widget.AppCompatTextView
                         style="@style/app_find_title_textview"
+                        android:id="@+id/tvVirtualSound"
                         android:drawableStart="@drawable/app_icon_find_virtual_sound"
                         android:text="@string/app_find_virtual_sound"
                         app:layout_constraintStart_toStartOf="parent"
@@ -366,15 +367,16 @@
                     <androidx.appcompat.widget.AppCompatTextView
                         style="@style/app_find_content_textview"
                         android:text="@string/app_find_virtual_sound_tips"
-                        android:layout_marginEnd="100dp"
+                        android:layout_marginEnd="30dp"
+                        app:layout_constraintTop_toBottomOf="@+id/tvVirtualSound"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent" />
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                        style="@style/app_find_doc_textview"
-                        android:id="@+id/tvVirtualSoundDoc"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+<!--                    <androidx.appcompat.widget.AppCompatTextView-->
+<!--                        style="@style/app_find_doc_textview"-->
+<!--                        android:id="@+id/tvVirtualSoundDoc"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"-->
+<!--                        app:layout_constraintTop_toTopOf="parent" />-->
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
